# google-step

./: .gitignore  CMakeLists.txt  README.md  template.cpp
.github/instructions/: cpp.instructions.md  general.instructions.md  py.instructions.md  test.instructions.md
Week1/: problem_statement.txt  w1_hw2.cpp  w1_hw_1  w1_hw_1.cpp  w1_hw_2.cpp
Week1/HW/: README.md  character_count.cpp  constraints.txt
Week1/output/: w1_output_1.txt
Week2/: README.md  broccoli.cpp  extra.cpp  out  problem_statement2.md  w2_hw1  w2_hw1.cpp
Week2/HW/: HW2.md  HW3.md  HW4.cpp  problem_statement.md  w2_hw1  w2_hw2.md
Week3/: README.md  excercise.cpp
Week3/HW/: HW1.cpp  problem_statement.md
Week4/: README.md  extra.cpp  problem_statement.md
Week4/HW/: CMakeLists.txt  HW.h  HW1.cpp  HW1_test.cpp  HW2.cpp  HW3.cpp  create_graph.cpp  main.cpp  problem_statement.md  read_files.cpp  read_files.h  test.cpp
Week5/: problem_statement.md
Week5-6/: README.md  memo.md
Week5-6/HW/: 01_simulated-annealing.cpp  02_random-init.cpp  03_multi-neighbors.cpp  hw.h  io.cpp  io.h  main.cpp
Week5-6/materials/: output_1.csv  output_2.csv  output_3.csv  output_4.csv  output_6.csv
Week5/HW/: 01_simulated-annealing.cpp  02_random-init.cpp  03_multi-neighbors.cpp  io.cpp  io.h  io_example.cpp  solver
Week5/materials/: output_0.csv  output_1.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv
Week7/: README.md
Week7/HW/: best-fit-malloc.c  common.c  first-fit-malloc.c  (+3 more)
note/: week1.md  week2.md  week3.md  week4.md
template/: README.md  homework.cpp  note.md  problem_statemant.md
(+2 files in other folders)
